criação de libs

--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -37,12 +37,13 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
     "import delta\n",
-    "def table_exists(catalog, database, table):\n",
-    "    count = (spark.sql(f\"SHOW TABLES IN `{catalog}`.`{database}`\")\n",
-    "               .filter(f\"database = '{database}' AND tableName = '{table}'\")\n",
-    "               .count())\n",
-    "    return count == 1"
+    "\n",
+    "\n",
+    "sys.path.insert(0, \"../lib/\")\n",
+    "\n",
+    "import utils"
    ]
   },
   {
@@ -66,33 +67,15 @@
     "catalog = \"bronze\"\n",
     "schema = \"upcell\"\n",
     "\n",
-    "tablename = \"produtos\"\n",
-    "id_field = \"IdProduto\"\n",
-    "timefield = \"DtAtualizacao\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e2999402-1bd6-499e-89c2-caecc9e88bb6",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Captura o schema dos arquivos CDC para usar no streaming\n",
-    "df_sample = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
-    "df_schema = df_sample.schema\n",
-    "print(f\"Schema capturado: {len(df_schema.fields)} colunas\")"
+    "#tablename = \"produtos\"\n",
+    "#id_field = \"IdProduto\"\n",
+    "#timefield = \"DtAtualizacao\"\n",
+    "\n",
+    "tablename = dbutils.widgets.get(\"tablename\")\n",
+    "id_field = dbutils.widgets.get(\"id_field\")\n",
+    "timestamp_field = dbutils.widgets.get(\"timefield\")\n",
+    "\n",
+    "df_schema = utils.import_schema(tablename)"
    ]
   },
   {
@@ -113,9 +96,11 @@
    },
    "outputs": [],
    "source": [
-    "if not table_exists(catalog, schema, tablename):\n",
+    "if not utils.table_exists(spark, catalog, schema, tablename):\n",
     "    print(\"tabela nao existe\")\n",
-    "    df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/full-load/{tablename}/\")\n",
+    "    df_full = spark.read.format(\"parquet\")\n",
+    "                        .schema(df_schema)\n",
+    "                        .load(f\"/Volumes/raw/upcell/full-load/{tablename}/\")\n",
     "    \n",
     "    (df_full.coalesce(1)\n",
     "        .write\n",
