--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "46060ed5-585d-4ae0-b5c4-b45af23d299f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/clientes/\")\n",
+    "df_full.display \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -98,17 +120,19 @@
    "source": [
     "if not utils.table_exists(spark, catalog, schema, tablename):\n",
     "    print(\"tabela nao existe\")\n",
-    "    df_full = spark.read.format(\"parquet\")\n",
-    "                        .schema(df_schema)\n",
-    "                        .load(f\"/Volumes/raw/upcell/full-load/{tablename}/\")\n",
-    "    \n",
+    "    df_full = (\n",
+    "        spark.read\n",
+    "            .format(\"parquet\")\n",
+    "            .schema(df_schema)\n",
+    "            .load(f\"/Volumes/raw/upcell/full-load/{tablename}/\")\n",
+    "    )\n",
     "    (df_full.coalesce(1)\n",
     "        .write\n",
     "        .format(\"delta\")\n",
     "        .mode(\"overwrite\")\n",
     "        .saveAsTable(f\"{catalog}.{schema}.{tablename}\"))\n",
     "else:\n",
-    "    print(\"tabela ja existe\")\n"
+    "    print(\"tabela ja existe\")"
    ]
   },
   {
