--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "tablename = dbutils.widgets.get(\"tablename\")\n",
     "id_field = dbutils.widgets.get(\"id_field\")\n",
-    "timestamp_field = dbutils.widgets.get(\"timefield\")\n",
+    "timestamp_field = dbutils.widgets.get(\"DtAtualizacao)\n",
     "\n",
     "df_schema = utils.import_schema(tablename)"
    ]
