--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -1,28 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "46060ed5-585d-4ae0-b5c4-b45af23d299f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/clientes/\")\n",
-    "df_full.display \n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -95,7 +73,7 @@
     "\n",
     "tablename = dbutils.widgets.get(\"tablename\")\n",
     "id_field = dbutils.widgets.get(\"id_field\")\n",
-    "timestamp_field = dbutils.widgets.get(\"DtAtualizacao)\n",
+    "timestamp_field = dbutils.widgets.get(\"DtAtualizacao\")\n",
     "\n",
     "df_schema = utils.import_schema(tablename)"
    ]
