--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -67,13 +67,13 @@
     "catalog = \"bronze\"\n",
     "schema = \"upcell\"\n",
     "\n",
-    "#tablename = \"produtos\"\n",
-    "#id_field = \"IdProduto\"\n",
-    "#timefield = \"DtAtualizacao\"\n",
+    "dbutils.widgets.text(\"tablename\", \"produtos\", \"Table Name\")\n",
+    "dbutils.widgets.text(\"id_field\", \"IdProduto\", \"ID Field\")\n",
+    "dbutils.widgets.text(\"timefield\", \"DtAtualizacao\", \"Time Field\")\n",
     "\n",
     "tablename = dbutils.widgets.get(\"tablename\")\n",
     "id_field = dbutils.widgets.get(\"id_field\")\n",
-    "timestamp_field = dbutils.widgets.get(\"DtAtualizacao\")\n",
+    "timefield = dbutils.widgets.get(\"timefield\")\n",
     "\n",
     "df_schema = utils.import_schema(tablename)"
    ]
