--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -67,10 +67,11 @@
     "catalog = \"bronze\"\n",
     "schema = \"upcell\"\n",
     "\n",
-    "dbutils.widgets.text(\"tablename\", \"produtos\", \"Table Name\")\n",
-    "dbutils.widgets.text(\"id_field\", \"IdProduto\", \"ID Field\")\n",
-    "dbutils.widgets.text(\"timefield\", \"DtAtualizacao\", \"Time Field\")\n",
+    "#tablename = \"produtos\"\n",
+    "#id_field = \"IdProduto\"\n",
+    "#timefield = \"DtAtualizacao\"\n",
     "\n",
+    "# Access widget values outside of any asynchronous context\n",
     "tablename = dbutils.widgets.get(\"tablename\")\n",
     "id_field = dbutils.widgets.get(\"id_field\")\n",
     "timefield = dbutils.widgets.get(\"timefield\")\n",
