--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -56,6 +56,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "2b4745d2-2098-4ca1-875e-964b1718b53d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DROP TABLE IF EXISTS bronze.upcell.produtos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "4ec0451d-f1c7-458e-b4c1-5a5c577dafe6",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -65,18 +86,134 @@
    "outputs": [],
    "source": [
     "catalog = \"bronze\"\n",
-    "schema = \"upcell\"\n",
+    "schemaname = \"upcell\"\n",
     "\n",
-    "#tablename = \"produtos\"\n",
-    "#id_field = \"IdProduto\"\n",
-    "#timefield = \"DtAtualizacao\"\n",
+    "tablename = \"produtos\"\n",
+    "id_field = \"IdProduto\"\n",
+    "timefield = \"DtAtualizacao\"\n",
     "\n",
     "# Access widget values outside of any asynchronous context\n",
-    "tablename = dbutils.widgets.get(\"tablename\")\n",
-    "id_field = dbutils.widgets.get(\"id_field\")\n",
-    "timefield = dbutils.widgets.get(\"timefield\")\n",
+    "#tablename = dbutils.widgets.get(\"tablename\")\n",
+    "#id_field = dbutils.widgets.get(\"id_field\")\n",
+    "#timefield = dbutils.widgets.get(\"timefield\")\n",
     "\n",
-    "df_schema = utils.import_schema(tablename)"
+    "ckeckpoint_location = f\"/Volumes/raw/{schemaname}/cdc/{tablename}_checkpoint/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f380192-e8bd-4a92-9e2a-b2e6e4a17dd3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Ingestor:\n",
+    "\n",
+    "    def __init__(self, catalog, schemaname, tablename, data_format):\n",
+    "        self.catalog = catalog\n",
+    "        self.schemaname = schemaname\n",
+    "        self.tablename = tablename\n",
+    "        self.data_format = data_format\n",
+    "        self.set_schema()\n",
+    "    \n",
+    "    def set_schema(self):\n",
+    "        self.data_schema = utils.import_schema(self.tablename)\n",
+    "\n",
+    "    def load(self, path):\n",
+    "        df = (spark.read\n",
+    "                   .format(self.data_format)\n",
+    "                   .schema(self.data_schema)\n",
+    "                   .load(path))\n",
+    "        return df\n",
+    "    \n",
+    "    def save(self, df):\n",
+    "        (df.write\n",
+    "          .format(\"delta\")\n",
+    "          .mode(\"overwrite\")\n",
+    "          .saveAsTable(f\"{self.catalog}.{self.schemaname}.{self.tablename}\")\n",
+    "        )\n",
+    "\n",
+    "    def execute(self, path):\n",
+    "        df = self.load(path)\n",
+    "        return self.save(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "45c82d7a-4652-4cc7-a432-6fae0f6621ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class IngestorCDC(Ingestor):\n",
+    "\n",
+    "    def __init__(self, catalog, schemaname, tablename, data_format, id_fild, timefield):\n",
+    "        \n",
+    "        super().__init__(catalog, schemaname, tablename, data_format)\n",
+    "        self.id_field = id_field\n",
+    "        self.timefield = timefield\n",
+    "        self.set_deltatable()\n",
+    "\n",
+    "    def set_deltatable(self):\n",
+    "        tablename = f\"{self.catalog}.{self.schemaname}.{self.tablename}\"\n",
+    "        self.deltatable = delta.DeltaTable.forName(spark, tablename)\n",
+    "\n",
+    "    def upsert(self, df):\n",
+    "        \n",
+    "        df.createOrReplaceGlobalTempView(f\"view_{self.tablename}\")\n",
+    "\n",
+    "        query = f\"\"\"\n",
+    "            SELECT *\n",
+    "            FROM global_temp.view_{self.tablename}\n",
+    "            QUALIFY ROW_NUMBER() OVER (PARTITION BY {self.id_field} ORDER BY {self.timefield} DESC) = 1\n",
+    "        \"\"\"\n",
+    "\n",
+    "        df_cdc = spark.sql(query)\n",
+    "\n",
+    "        (self.deltatable\n",
+    "             .alias(\"b\")\n",
+    "             .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\")\n",
+    "             .whenMatchedDelete(condition=\"d.OP = 'D'\")\n",
+    "             .whenMatchedUpdateAll(condition=\"d.OP = 'U'\")\n",
+    "             .whenNotMatchedInsertAll(condition=\"d.OP = 'I' OR d.OP = 'U'\")\n",
+    "             .execute())\n",
+    "\n",
+    "    def load(self, path):\n",
+    "        df = (spark.readStream\n",
+    "                          .format(\"cloudFiles\")\n",
+    "                          .option(\"cloudFiles.format\", self.data_format)\n",
+    "                          .schema(self.data_schema)\n",
+    "                          .load(path))\n",
+    "        return df\n",
+    "\n",
+    "    def save(self, df):\n",
+    "        stream = (df.writeStream\n",
+    "                    .option(\"checkpointLocation\", f\"/Volumes/raw/self.schemaname/cdc/{self.tablename}_checkpoint/\")\n",
+    "                    .foreachBatch(lambda df, batchID: self.upsert(df))\n",
+    "                    .trigger(availableNow=True))\n",
+    "        return stream.start()"
    ]
   },
   {
@@ -97,115 +234,21 @@
    },
    "outputs": [],
    "source": [
-    "if not utils.table_exists(spark, catalog, schema, tablename):\n",
-    "    print(\"tabela nao existe\")\n",
-    "    df_full = (\n",
-    "        spark.read\n",
-    "            .format(\"parquet\")\n",
-    "            .schema(df_schema)\n",
-    "            .load(f\"/Volumes/raw/upcell/full-load/{tablename}/\")\n",
-    "    )\n",
-    "    (df_full.coalesce(1)\n",
-    "        .write\n",
-    "        .format(\"delta\")\n",
-    "        .mode(\"overwrite\")\n",
-    "        .saveAsTable(f\"{catalog}.{schema}.{tablename}\"))\n",
-    "else:\n",
-    "    print(\"tabela ja existe\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8fbad948-63ab-4244-8c07-231342112e88",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## 2. Configuração e Full-Load\n",
-    "\n",
-    "Define variáveis de configuração e cria a tabela inicial se não existir."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1f59ccc3-4e51-4baf-867c-b52ae2725994",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c2ee8c1c-b061-4a34-ac8b-a1b6285fb49b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def upsert(df, deltatable):\n",
-    "    df.createOrReplaceGlobalTempView(f\"view_{tablename}\")\n",
-    "\n",
-    "    query = f\"\"\"\n",
-    "    SELECT *\n",
-    "    FROM global_temp.view_{tablename}\n",
-    "    QUALIFY ROW_NUMBER() OVER (PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
-    "    \"\"\"\n",
-    "\n",
-    "    df_cdc = spark.sql(query)\n",
-    "\n",
-    "    (deltatable.alias(\"b\")\n",
-    "        .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\")\n",
-    "        .whenMatchedDelete(condition = \"d.OP = 'D'\")\n",
-    "        .whenMatchedUpdateAll(condition = \"d.OP = 'U'\")\n",
-    "        .whenNotMatchedInsertAll(condition = \"d.OP = 'I' OR d.OP = 'U'\")\n",
-    "        .execute()\n",
-    "    )\n",
-    "\n",
-    "df_stream = (spark.readStream\n",
-    "    .format(\"cloudFiles\")\n",
-    "    .option(\"cloudFiles.format\", \"parquet\")\n",
-    "    .schema(df_schema)\n",
-    "    .load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
-    ")\n",
-    "\n",
-    "stream = (df_stream.writeStream\n",
-    "    .option(\"checkpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}_checkpoint/\")\n",
-    "    .foreachBatch(lambda df, batchID: upsert(df, bronze))\n",
-    "    .trigger(availableNow=True)\n",
+    "if not utils.table_exists(spark, catalog, schemaname, tablename):\n",
+    "    print(\"tabela nao existe, criando...\")\n",
     "    \n",
-    ")\n"
+    "    dbutils.fs.rm(ckeckpoint_location, True)\n",
+    "\n",
+    "    ingest_full_load = Ingestor(catalog=catalog, \n",
+    "                                schemaname=schemaname, \n",
+    "                                tablename=tablename, \n",
+    "                                data_format=\"parquet\")\n",
+    "    ingest_full_load.execute(f\"/Volumes/raw/{schemaname}/full-load/{tablename}/\")\n",
+    "    \n",
+    "    print(\"tabela criada com sucesso\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"tabela ja existe, ignorando full-load\")"
    ]
   },
   {
@@ -218,7 +261,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "9f6ff601-6578-4e09-99a4-adc065e51c15",
+     "nuid": "efb4de04-5cad-4494-ad45-3175fe581445",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -226,7 +269,13 @@
    },
    "outputs": [],
    "source": [
-    "stream.start()"
+    "ingest_cdc = IngestorCDC(catalog=catalog, \n",
+    "                        schemaname=schemaname, \n",
+    "                        tablename=tablename, \n",
+    "                        data_format=\"parquet\", \n",
+    "                        id_fild=id_field,\n",
+    "                        timefield=timefield)\n",
+    "stream  = ingest_cdc.execute(f\"/Volumes/raw/{schemaname}/cdc/{tablename}/\")\n"
    ]
   }
  ],
