--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -37,11 +37,23 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "import delta\n",
     "\n",
+    "# Resolve caminho absoluto para os utilitários e garante distribuição aos workers\n",
+    "notebook_dir = os.getcwd()\n",
+    "repo_root = os.path.abspath(os.path.join(notebook_dir, \"..\"))\n",
+    "lib_path = os.path.join(repo_root, \"lib\")\n",
     "\n",
-    "sys.path.insert(0, \"../lib/\")\n",
+    "if lib_path not in sys.path:\n",
+    "    sys.path.insert(0, lib_path)\n",
+    "\n",
+    "utils_path = os.path.join(lib_path, \"utils.py\")\n",
+    "if os.path.exists(utils_path):\n",
+    "    spark.sparkContext.addPyFile(utils_path)\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Arquivo de utilidades não encontrado: {utils_path}\")\n",
     "\n",
     "import utils"
    ]
@@ -169,8 +181,7 @@
    "source": [
     "class IngestorCDC(Ingestor):\n",
     "\n",
-    "    def __init__(self, catalog, schemaname, tablename, data_format, id_fild, timefield):\n",
-    "        \n",
+    "    def __init__(self, catalog, schemaname, tablename, data_format, id_field, timefield):\n",
     "        super().__init__(catalog, schemaname, tablename, data_format)\n",
     "        self.id_field = id_field\n",
     "        self.timefield = timefield\n",
@@ -181,7 +192,6 @@
     "        self.deltatable = delta.DeltaTable.forName(spark, tablename)\n",
     "\n",
     "    def upsert(self, df):\n",
-    "        \n",
     "        df.createOrReplaceGlobalTempView(f\"view_{self.tablename}\")\n",
     "\n",
     "        query = f\"\"\"\n",
@@ -194,7 +204,7 @@
     "\n",
     "        (self.deltatable\n",
     "             .alias(\"b\")\n",
-    "             .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\")\n",
+    "             .merge(df_cdc.alias(\"d\"), f\"b.{self.id_field} = d.{self.id_field}\")\n",
     "             .whenMatchedDelete(condition=\"d.OP = 'D'\")\n",
     "             .whenMatchedUpdateAll(condition=\"d.OP = 'U'\")\n",
     "             .whenNotMatchedInsertAll(condition=\"d.OP = 'I' OR d.OP = 'U'\")\n",
@@ -210,9 +220,9 @@
     "\n",
     "    def save(self, df):\n",
     "        stream = (df.writeStream\n",
-    "                    .option(\"checkpointLocation\", f\"/Volumes/raw/self.schemaname/cdc/{self.tablename}_checkpoint/\")\n",
-    "                    .foreachBatch(lambda df, batchID: self.upsert(df))\n",
-    "                    .trigger(availableNow=True))\n",
+    "                    .option(\"checkpointLocation\", f\"/Volumes/raw/{self.schemaname}/cdc/{self.tablename}_checkpoint/\")\n",
+    "                    .foreachBatch(lambda df_batch, batch_id: self.upsert(df_batch))\n",
+    "                    .trigger(processingTime=\"30 seconds\"))\n",
     "        return stream.start()"
    ]
   },
@@ -273,9 +283,9 @@
     "                        schemaname=schemaname, \n",
     "                        tablename=tablename, \n",
     "                        data_format=\"parquet\", \n",
-    "                        id_fild=id_field,\n",
+    "                        id_field=id_field,\n",
     "                        timefield=timefield)\n",
-    "stream  = ingest_cdc.execute(f\"/Volumes/raw/{schemaname}/cdc/{tablename}/\")\n"
+    "stream = ingest_cdc.execute(f\"/Volumes/raw/{schemaname}/cdc/{tablename}/\")"
    ]
   }
  ],
