--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -37,46 +37,11 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import sys\n",
     "import delta\n",
     "\n",
-    "# Resolve caminho absoluto para os utilitários e garante distribuição aos workers\n",
-    "notebook_dir = os.getcwd()\n",
-    "repo_root = os.path.abspath(os.path.join(notebook_dir, \"..\"))\n",
-    "lib_path = os.path.join(repo_root, \"lib\")\n",
-    "\n",
-    "if lib_path not in sys.path:\n",
-    "    sys.path.insert(0, lib_path)\n",
-    "\n",
-    "utils_path = os.path.join(lib_path, \"utils.py\")\n",
-    "if os.path.exists(utils_path):\n",
-    "    spark.sparkContext.addPyFile(utils_path)\n",
-    "else:\n",
-    "    raise FileNotFoundError(f\"Arquivo de utilidades não encontrado: {utils_path}\")\n",
-    "\n",
-    "import utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2b4745d2-2098-4ca1-875e-964b1718b53d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark.sql(\"DROP TABLE IF EXISTS bronze.upcell.produtos\")"
+    "sys.path.insert(0, \"../lib/\")\n",
+    "import utils\n"
    ]
   },
   {
