--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -37,11 +37,13 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import delta\n",
+    "import sys\n",
     "\n",
     "sys.path.insert(0, \"../lib/\")\n",
-    "import utils\n"
+    "\n",
+    "import utils\n",
+    "import ingestors"
    ]
   },
   {
@@ -65,130 +67,18 @@
     "catalog = \"bronze\"\n",
     "schemaname = \"upcell\"\n",
     "\n",
-    "tablename = \"produtos\"\n",
-    "id_field = \"IdProduto\"\n",
-    "timefield = \"DtAtualizacao\"\n",
+    "#tablename = \"clientes\"\n",
+    "#id_field = \"idCliente\"\n",
+    "#timefield = \"DtAtualizacao\"\n",
     "\n",
-    "# Access widget values outside of any asynchronous context\n",
-    "#tablename = dbutils.widgets.get(\"tablename\")\n",
-    "#id_field = dbutils.widgets.get(\"id_field\")\n",
-    "#timefield = dbutils.widgets.get(\"timefield\")\n",
+    "## Access widget values outside of any asynchronous context\n",
+    "tablename = dbutils.widgets.get(\"tablename\")\n",
+    "id_field = dbutils.widgets.get(\"id_field\")\n",
+    "timefield = dbutils.widgets.get(\"timefield\")\n",
     "\n",
+    "cdc_path = f\"/Volumes/raw/{schemaname}/cdc/{tablename}/\"\n",
+    "full_load_path = f\"/Volumes/raw/{schemaname}/full-load/{tablename}/\"\n",
     "ckeckpoint_location = f\"/Volumes/raw/{schemaname}/cdc/{tablename}_checkpoint/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5f380192-e8bd-4a92-9e2a-b2e6e4a17dd3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Ingestor:\n",
-    "\n",
-    "    def __init__(self, catalog, schemaname, tablename, data_format):\n",
-    "        self.catalog = catalog\n",
-    "        self.schemaname = schemaname\n",
-    "        self.tablename = tablename\n",
-    "        self.data_format = data_format\n",
-    "        self.set_schema()\n",
-    "    \n",
-    "    def set_schema(self):\n",
-    "        self.data_schema = utils.import_schema(self.tablename)\n",
-    "\n",
-    "    def load(self, path):\n",
-    "        df = (spark.read\n",
-    "                   .format(self.data_format)\n",
-    "                   .schema(self.data_schema)\n",
-    "                   .load(path))\n",
-    "        return df\n",
-    "    \n",
-    "    def save(self, df):\n",
-    "        (df.write\n",
-    "          .format(\"delta\")\n",
-    "          .mode(\"overwrite\")\n",
-    "          .saveAsTable(f\"{self.catalog}.{self.schemaname}.{self.tablename}\")\n",
-    "        )\n",
-    "\n",
-    "    def execute(self, path):\n",
-    "        df = self.load(path)\n",
-    "        return self.save(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "45c82d7a-4652-4cc7-a432-6fae0f6621ef",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class IngestorCDC(Ingestor):\n",
-    "\n",
-    "    def __init__(self, catalog, schemaname, tablename, data_format, id_field, timefield):\n",
-    "        super().__init__(catalog, schemaname, tablename, data_format)\n",
-    "        self.id_field = id_field\n",
-    "        self.timefield = timefield\n",
-    "        self.set_deltatable()\n",
-    "\n",
-    "    def set_deltatable(self):\n",
-    "        tablename = f\"{self.catalog}.{self.schemaname}.{self.tablename}\"\n",
-    "        self.deltatable = delta.DeltaTable.forName(spark, tablename)\n",
-    "\n",
-    "    def upsert(self, df):\n",
-    "        df.createOrReplaceGlobalTempView(f\"view_{self.tablename}\")\n",
-    "\n",
-    "        query = f\"\"\"\n",
-    "            SELECT *\n",
-    "            FROM global_temp.view_{self.tablename}\n",
-    "            QUALIFY ROW_NUMBER() OVER (PARTITION BY {self.id_field} ORDER BY {self.timefield} DESC) = 1\n",
-    "        \"\"\"\n",
-    "\n",
-    "        df_cdc = spark.sql(query)\n",
-    "\n",
-    "        (self.deltatable\n",
-    "             .alias(\"b\")\n",
-    "             .merge(df_cdc.alias(\"d\"), f\"b.{self.id_field} = d.{self.id_field}\")\n",
-    "             .whenMatchedDelete(condition=\"d.OP = 'D'\")\n",
-    "             .whenMatchedUpdateAll(condition=\"d.OP = 'U'\")\n",
-    "             .whenNotMatchedInsertAll(condition=\"d.OP = 'I' OR d.OP = 'U'\")\n",
-    "             .execute())\n",
-    "\n",
-    "    def load(self, path):\n",
-    "        df = (spark.readStream\n",
-    "                          .format(\"cloudFiles\")\n",
-    "                          .option(\"cloudFiles.format\", self.data_format)\n",
-    "                          .schema(self.data_schema)\n",
-    "                          .load(path))\n",
-    "        return df\n",
-    "\n",
-    "    def save(self, df):\n",
-    "        stream = (df.writeStream\n",
-    "                    .option(\"checkpointLocation\", f\"/Volumes/raw/{self.schemaname}/cdc/{self.tablename}_checkpoint/\")\n",
-    "                    .foreachBatch(lambda df_batch, batch_id: self.upsert(df_batch))\n",
-    "                    .trigger(processingTime=\"30 seconds\"))\n",
-    "        return stream.start()"
    ]
   },
   {
@@ -210,16 +100,17 @@
    "outputs": [],
    "source": [
     "if not utils.table_exists(spark, catalog, schemaname, tablename):\n",
+    "    \n",
     "    print(\"tabela nao existe, criando...\")\n",
     "    \n",
     "    dbutils.fs.rm(ckeckpoint_location, True)\n",
     "\n",
-    "    ingest_full_load = Ingestor(catalog=catalog, \n",
-    "                                schemaname=schemaname, \n",
-    "                                tablename=tablename, \n",
-    "                                data_format=\"parquet\")\n",
-    "    ingest_full_load.execute(f\"/Volumes/raw/{schemaname}/full-load/{tablename}/\")\n",
-    "    \n",
+    "    ingest_full_load = ingestors.Ingestor(spark=spark,\n",
+    "                                          catalog=catalog, \n",
+    "                                          schemaname=schemaname, \n",
+    "                                          tablename=tablename, \n",
+    "                                          data_format=\"parquet\")\n",
+    "    ingest_full_load.execute(full_load_path)\n",
     "    print(\"tabela criada com sucesso\")\n",
     "\n",
     "else:\n",
@@ -244,13 +135,39 @@
    },
    "outputs": [],
    "source": [
-    "ingest_cdc = IngestorCDC(catalog=catalog, \n",
-    "                        schemaname=schemaname, \n",
-    "                        tablename=tablename, \n",
-    "                        data_format=\"parquet\", \n",
-    "                        id_field=id_field,\n",
-    "                        timefield=timefield)\n",
-    "stream = ingest_cdc.execute(f\"/Volumes/raw/{schemaname}/cdc/{tablename}/\")"
+    "ingest_cdc = ingestors.IngestorCDC(spark=spark,\n",
+    "                                   catalog=catalog, \n",
+    "                                   schemaname=schemaname, \n",
+    "                                   tablename=tablename, \n",
+    "                                   data_format=\"parquet\", \n",
+    "                                   id_field=id_field,\n",
+    "                                   timefield=timefield)\n",
+    "\n",
+    "stream = ingest_cdc.execute(cdc_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5fe4c7dd-4e14-44f8-af9e-1b97f4a15655",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT count(*) AS total_clientes\n",
+    "FROM bronze.upcell.clientes;"
    ]
   }
  ],
@@ -272,7 +189,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5195627179372982,
+     "commandId": 7418403187387864,
      "dataframes": [
       "_sqldf"
      ]
